<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuItemCardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_imageMenu"
        android:layout_width="154dp"
        android:layout_height="154dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="154dp"
            android:layout_height="154dp">

            <ImageView
                android:id="@+id/menuItemImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_usus"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/menuItemName"
        android:layout_width="164dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="4dp"
        android:alpha="0.8"
        android:fontFamily="sans-serif-medium"
        android:text="@string/menu_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_imageMenu"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/menuItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/menu_price"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/menuItemName"
        app:layout_constraintStart_toStartOf="@+id/menuItemName"
        app:layout_constraintTop_toBottomOf="@+id/menuItemName" />

    <ImageView
        android:id="@+id/imageRate"
        android:layout_width="21dp"
        android:layout_height="18dp"
        android:src="@drawable/baseline_star_rate_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuItemPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/menuItemRate"
        android:layout_width="116dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:text="@string/menu_rate"
        android:textColor="@color/app_color_primary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toEndOf="@+id/imageRate" />
    <TextView
        android:id="@+id/menuItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teks yang tidak terlihat"
        android:textSize="1sp"
        android:textColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toEndOf="@+id/imageRate"/>

    <TextView
        android:id="@+id/menuItemLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teks yang tidak terlihat"
        android:textSize="1sp"
        android:textColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toEndOf="@+id/imageRate"/>

</androidx.constraintlayout.widget.ConstraintLayout>
