<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menuImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_bakar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/menuTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/nama_menu"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/menuImage" />

            <TextView
                android:id="@+id/menuPrice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="236dp"
                android:layout_marginTop="20dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/menuTitle"
                app:layout_constraintTop_toBottomOf="@id/menuImage" />

            <TextView
                android:id="@+id/menuDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/deskripsi_menu"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/menuTitle"
                app:layout_constraintTop_toBottomOf="@id/menuTitle" />

            <ImageView
                android:id="@+id/lineDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_line_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/menuDescription"
                app:layout_constraintTop_toBottomOf="@id/menuDescription" />

            <Button
                android:id="@+id/btnOpenMaps"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/ic_store_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.041"
                app:layout_constraintStart_toStartOf="@+id/lineDetail"
                app:layout_constraintTop_toBottomOf="@id/lineDetail" />


            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Lokasi"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnOpenMaps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toEndOf="@+id/btnOpenMaps"
                app:layout_constraintTop_toTopOf="@+id/lineDetail" />

            <TextView
                android:id="@+id/locationDescription"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/location_complete"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/locationName"
                app:layout_constraintTop_toBottomOf="@id/locationName" />

            <ImageView
                android:id="@+id/lineDetail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:src="@drawable/ic_line_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/btnOpenMaps"
                app:layout_constraintTop_toBottomOf="@id/btnOpenMaps" />

            <TextView
                android:id="@+id/numberMenu"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="39dp"
                android:layout_marginRight="10dp"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/iv_Plus"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/lineDetail2"
                app:layout_constraintTop_toBottomOf="@id/lineDetail2" />

            <ImageView
                android:id="@+id/iv_Minus"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_kurang"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/numberMenu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="@+id/lineDetail2"
                app:layout_constraintTop_toBottomOf="@id/lineDetail2"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/iv_Plus"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_tambah"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.636"
                app:layout_constraintStart_toStartOf="@+id/lineDetail2"
                app:layout_constraintTop_toBottomOf="@id/lineDetail2" />


            <ImageView
                android:id="@+id/chartColumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/chart_kolom"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lineDetail2" />

            <TextView
                android:id="@+id/chartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/chartadd"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="@+id/lineDetail2"
                app:layout_constraintTop_toBottomOf="@id/lineDetail2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
